# gitnv

./: CMakeLists.txt  Makefile  README.md  bufread.h  cache.c  cache.h  config.h  debug.h  kstr.c  kstr.h  log.c  main.c  state.c  state.h  test.cpp  test_printer.h  util.c  util.h
.github/: colors.cmake
cmake/: Commands.mk  setup_commands.py
test/: parse-args.cpp
